--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 .claude
 CLAUDE.md
+
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+src-tauri/target/
+
+# Environment
+.env
+.env.*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
