--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-global-shortcut": "^2",
     "react": "^19",
     "react-dom": "^19",
-    "tailwindcss": "^4",
-    "@tailwindcss/vite": "^4"
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/node": "^25.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4",
