--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "typecheck": "tsc -b",
+    "check": "npm run typecheck && npm run lint",
+    "clippy": "cargo clippy --manifest-path src-tauri/Cargo.toml -- -D warnings",
+    "fmt:rust": "cargo fmt --manifest-path src-tauri/Cargo.toml -- --check",
+    "fmt:rust:fix": "cargo fmt --manifest-path src-tauri/Cargo.toml",
+    "check:all": "npm run check && npm run clippy && npm run fmt:rust"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4",
@@ -18,12 +26,17 @@
     "tailwindcss": "^4"
   },
   "devDependencies": {
+    "@eslint/js": "^9",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4",
+    "eslint": "^9",
+    "eslint-plugin-react-hooks": "^5",
+    "globals": "^16",
     "typescript": "^5.7",
+    "typescript-eslint": "^8",
     "vite": "^6"
   }
 }
