feat: add Homebrew tap, install script, and CI integration
- Add install.sh for quarantine-free macOS installs
- Add cask-template.rb and update-homebrew workflow for automated tap updates
- Update release body with install instructions and Gatekeeper note
- Update developer guide with distribution and secrets docs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,19 @@ jobs:
           releaseName: "Steadi ${{ github.ref_name }}"
           releaseDraft: true
           releaseBody: |
+            ## Install
+
+            **Homebrew** (recommended):
+            ```sh
+            brew tap siddharth-khattar/steadi
+            brew install --cask steadi
+            ```
+
+            **Shell script**:
+            ```sh
+            curl -fsSL https://raw.githubusercontent.com/Siddharth-Khattar/Steadi/main/install.sh | sh
+            ```
+
             ## Downloads
 
             | Platform | File |
@@ -97,6 +110,10 @@ jobs:
             | macOS (Apple Silicon) | `Steadi_*_aarch64.dmg` |
             | macOS (Intel) | `Steadi_*_x64.dmg` |
             | Windows | `Steadi_*_x64-setup.exe` |
+
+            > **macOS Gatekeeper note:** Steadi is not code-signed. If you download a DMG manually,
+            > macOS may show "app is damaged." Use one of the install methods above, or after a
+            > manual install run: `xattr -cr /Applications/Steadi.app`
 
             See `checksums-sha256.txt` for file integrity verification.
           args: ${{ matrix.args }} ${{ steps.sign-check.outputs.sign_args }}
