chore: trigger CI on push to main and reset version to 0.0.1
- Add push trigger to CI workflow alongside PR trigger
- Reset version to 0.0.1 across package.json, Cargo.toml, tauri.conf.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,11 @@
-# ABOUTME: CI pipeline that validates every PR to main.
+# ABOUTME: CI pipeline that validates every push and PR to main.
 # ABOUTME: Runs frontend checks, Rust checks, and a full Tauri build.
 
 name: CI
 
 on:
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
 
