--- a/package.json
+++ b/package.json
@@ -18,12 +18,24 @@
     "check:all": "npm run check && npm run clippy && npm run fmt:rust"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-global-shortcut": "^2",
+    "@tauri-apps/plugin-store": "^2.4.2",
+    "@uiw/react-codemirror": "^4.25.4",
     "react": "^19",
     "react-dom": "^19",
-    "tailwindcss": "^4"
+    "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^4.6.4",
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9",
